syntax = "proto3";

package minekube.connect.v1alpha1;

service TunnelService {
  // Tunnel the connection of a session.
  rpc Tunnel(stream TunnelRequest) returns (stream TunnelResponse);
}

message TunnelRequest {
  // This is a raw client bound chunk of data.
  //
  // The data is just a chunk of the stream and it should
  // never be assumed it contains a complete single packet.
  bytes data = 1;
}

message TunnelResponse {
  // This is a raw server bound chunk of data.
  //
  // The data is just a chunk of the stream and it should
  // never be assumed it contains a complete single packet.
  bytes data = 1;
}
